added the link to chesspp

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<div class="content">
 		<center><img src="img/logo.png" width=50%></center>
 		<center><h1>CRÉATIONS<h1><br>
-		<div class="hoverContainer" id="chessppLogo">
+		<a href = "chesspp/chess++.html"><div class="hoverContainer" id="chessppLogo">
 			<div class="overlay"></div>
 			<img src="img\chesspp_logo.png" class="hoverImage">
+		</a>	
 		</div></center>	
 		</div>
 	</content>
